@@ -1,6 +1,7 @@
 {% load automate_tags %}
 {% mocked_services as mocked_services_ %}
 {% if mocked_services_%}
+  <br>
   <div class="panel panel-danger">
     <div class="panel-heading">
       <h4>Mocked services</h4>
